--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,8 @@
 
 html {
     background-image: url(./images/sports.jpg);
-    background-repeat: no-repeat center fixed; 
+    background-repeat: no-repeat center fixed;
+    background-size: 100% 100%; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
